--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     
     </head>
   <body>
-    <h1>My Website</h1>
+    <h1>My Webpage</h1>
     
-    <p>This is <strong><em>my</em></strong> test website</p>
+    <p>This is <strong><em>my</em></strong> test webpage</p>
   </body>
 </html>
