--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1>My Webpage</h1>
     
-    <p>This is <strong><em>my</em></strong> test webpage</p>
+    <p><strong>please <em>do </em>your </strong>wor</p>
     
     <h2>Achievements</h2>
     <p>Learned to code in </p>
