--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <p><strong>please <em>do </em>your </strong>wor</p>
     
     <h2>Achievements</h2>
-    <p>Learned to code in </p>
+    <p>please do it</p>
     
     <h2>About Me</h2>
-    <p>heyo</p>
+    <p>please</p>
   </body>
 </html>
