--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1>My Webpage</h1>
     
-    <p><strong>please <em>do </em>your </strong>wor</p>
+    <p><strong>please <em>do </em>your </strong>work</p>
     
     <h2>Achievements</h2>
     <p>please do it</p>
